fix compile error and improve java code